--- a/SimpleTrader.Domain/SimpleTrader.Domain.csproj
+++ b/SimpleTrader.Domain/SimpleTrader.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
