--- a/SimpleTrader.Domain.Tests/SimpleTrader.Domain.Tests.csproj
+++ b/SimpleTrader.Domain.Tests/SimpleTrader.Domain.Tests.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\TransactionServices\**" />
+    <EmbeddedResource Remove="Services\TransactionServices\**" />
+    <None Remove="Services\TransactionServices\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -19,10 +25,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\TransactionServices\" />
   </ItemGroup>
 
   <ItemGroup>
